# otio-openassetio

./: pyproject.toml  setup.py
.github/workflows/: ci.yaml
otio_openassetio/operations/: openassetio_media_linker.py
tests/: test_otio_openassetio.py
